# sigmaker

./: .gitignore  CMakeLists.txt  README.md  build-mingw32-static.bat  build-msvc-x64-static.bat  build-msvc-x86-static.bat  config.yml  main.h.in  setup-ninja-msvc-x64-static.bat
src/: main.cpp
src/modules/: config.cpp  config.h  data-mapper.cpp  data-mapper.h  eventloop.cpp  eventloop.h  scanner.cpp  scanner.h  sigmaker.cpp  sigmaker.h
